# cpp-coursework

./: .gitignore
avl_tree/: meson.build
avl_tree/src/: avl.cpp  avl.hpp  test.cpp
io/: meson.build  readwriteme.txt
io/src/: buff_buff_file_io.hpp  buff_buff_file_test.cpp  buff_io.hpp  buff_string_io.hpp  buff_string_test.cpp  file_io.hpp  file_test.cpp  io.hpp  string_io.hpp  string_test.cpp
matrix/: justfile  meson.build
matrix/src/: bench.cpp  matrix.hpp  test.cpp
mixin/: justfile  main.cpp
plane-lib/: justfile  meson.build
plane-lib/src/: line.hpp  point.hpp  test.cpp  utils.hpp  vec.hpp
primecalcen/: justfile  primecalcen.cpp
vrisc/: a.out  factorial.vrisc  justfile
vrisc/src/: emulator.cpp
